<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#fff">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="AirQ"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

<androidx.cardview.widget.CardView
    android:id="@+id/humid_"
    android:visibility="invisible"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:layout_height="wrap_content"
    app:cardElevation="1dp"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            style="@style/t"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/hicon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/humid_icon"/>
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/_00"
        style="@style/value"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="#111111"/>

        </LinearLayout>
    </LinearLayout></androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/temp_"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        app:cardElevation="1dp"
        app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            style="@style/t"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ticon"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:src="@drawable/temp_icon"/>
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00"
                android:layout_gravity="bottom"
                style="@style/value"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="#111111"/>
        </LinearLayout>
    </LinearLayout></androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/aq_"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        app:cardElevation="1dp"
        app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_quality"
            style="@style/t"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/aqicon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/aq_icon"/>
            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Good"
                android:layout_gravity="center_horizontal"
                style="@style/value"/>

        </LinearLayout><TextView
        android:id="@+id/ppm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#CE111111"/>
    </LinearLayout></androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:text="@string/connect_device"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>